Trying to fix the nav spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -16,6 +16,7 @@ header, footer	{
 	color: #fff;
 	background: #333;
 	padding: 20px;
+	padding-bottom: 5px;
 }
 
 .title {
@@ -34,6 +35,7 @@ header, footer	{
 .navHeader li {
 	color: #999;
 	display: inline;
+	margin: 0;
 	padding-right: 20px;
 	font-size: 1.3em;
 }
